Ajoute Controller, Main, View

--- a/.jacocoverage/report.html/g45502.atl.asciipaint.model/ColoredShape.java.html
+++ b/.jacocoverage/report.html/g45502.atl.asciipaint.model/ColoredShape.java.html
@@ -5,7 +5,7 @@
  * @author G45502
  */
 public abstract class ColoredShape implements Shape{
-    char color;
+    private char color;
 
 <span class="fc" id="L10">    public ColoredShape(char color) {</span>
 <span class="fc" id="L11">        this.color = color;</span>
