--- a/.jacocoverage/report.html/g45502.atl.asciipaint.model/Rectangle.java.html
+++ b/.jacocoverage/report.html/g45502.atl.asciipaint.model/Rectangle.java.html
@@ -11,86 +11,114 @@ public class Rectangle extends ColoredShape {
     double width;
     double height;
 
+    /**
+     * Builder of rectangle with all attribute
+     * @param upperleft point at the to left of the rectangle
+     * @param width length of the width for the rectangle
+     * @param height length of the height for the rectangle
+     * @param color character to fill the shape with
+     */
     public Rectangle(Point upperleft, double width, double height, char color) {
-<span class="fc" id="L15">        super(color);</span>
-<span class="fc bfc" id="L16" title="All 2 branches covered.">        if (upperleft == null) {</span>
-<span class="fc" id="L17">            throw new NullPointerException();</span>
+<span class="fc" id="L22">        super(color);</span>
+<span class="fc bfc" id="L23" title="All 2 branches covered.">        if (upperleft == null) {</span>
+<span class="fc" id="L24">            throw new NullPointerException();</span>
         }
-<span class="fc" id="L19">        this.upperleft = upperleft;</span>
-<span class="fc" id="L20">        this.width = width;</span>
-<span class="fc" id="L21">        this.height = height;</span>
-<span class="fc" id="L22">    }</span>
+<span class="fc" id="L26">        this.upperleft = upperleft;</span>
+<span class="fc" id="L27">        this.width = width;</span>
+<span class="fc" id="L28">        this.height = height;</span>
+<span class="fc" id="L29">    }</span>
 
+    /**
+     *
+     * @param upperleft point at the to left of the rectangle
+     * @param width length of the width for the rectangle
+     * @param height length of the height for the rectangle
+     */
     public Rectangle(Point upperleft, double width, double height) {
-<span class="fc" id="L25">        this(upperleft, width, height, '#');</span>
-<span class="fc" id="L26">    }</span>
+<span class="fc" id="L38">        this(upperleft, width, height, '#');</span>
+<span class="fc" id="L39">    }</span>
     
+    /**
+     * Builder of rectangle default
+     */
     public Rectangle() {
-<span class="fc" id="L29">        this(new Point(), 0.0, 0.0, '#');</span>
-<span class="fc" id="L30">    }</span>
+<span class="fc" id="L45">        this(new Point(), 0.0, 0.0, '#');</span>
+<span class="fc" id="L46">    }</span>
 
+    /**
+     * Getter of upperLeft
+     * @return the upperleft point of the rectangle
+     */
     public Point getUpperleft() {
-<span class="fc" id="L33">        return upperleft;</span>
+<span class="fc" id="L53">        return upperleft;</span>
     }
 
+    /**
+     * Getter of width
+     * @return width of the shape
+     */
     public double getWidth() {
-<span class="fc" id="L37">        return width;</span>
+<span class="fc" id="L61">        return width;</span>
     }
 
+    /**
+     * Getter of height
+     * @return height of the shape
+     */
     public double getHeight() {
-<span class="fc" id="L41">        return height;</span>
+<span class="fc" id="L69">        return height;</span>
     }
 
     @Override
     public char getColor() {
-<span class="fc" id="L46">        return super.getColor();</span>
+<span class="fc" id="L74">        return super.getColor();</span>
     }
 
     @Override
     public boolean isInside(Point p) {
-<span class="fc" id="L51">        Point bottomright = new Point(upperleft);</span>
-<span class="fc" id="L52">        bottomright.move(width, -height);</span>
-<span class="pc bpc" id="L53" title="1 of 4 branches missed.">        return (p.getX() &gt;= upperleft.getX() &amp;&amp; p.getX() &lt;= bottomright.getX()</span>
-<span class="fc bfc" id="L54" title="All 2 branches covered.">                &amp;&amp; p.getY() &lt;= upperleft.getY() </span>
-<span class="pc bpc" id="L55" title="1 of 2 branches missed.">                &amp;&amp; p.getY() &gt;= bottomright.getY());</span>
+<span class="fc" id="L79">        Point bottomright = new Point(upperleft);</span>
+<span class="fc" id="L80">        bottomright.move(width, -height);</span>
+<span class="pc bpc" id="L81" title="1 of 4 branches missed.">        return (p.getX() &gt;= upperleft.getX() &amp;&amp; p.getX() &lt;= bottomright.getX()</span>
+<span class="fc bfc" id="L82" title="All 2 branches covered.">                &amp;&amp; p.getY() &lt;= upperleft.getY() </span>
+<span class="pc bpc" id="L83" title="1 of 2 branches missed.">                &amp;&amp; p.getY() &gt;= bottomright.getY());</span>
     }
 
     @Override
     public void move(double dx, double dy) {
-<span class="fc" id="L60">        upperleft.move(dx, dy);</span>
-<span class="fc" id="L61">    }</span>
+<span class="fc" id="L88">        upperleft.move(dx, dy);</span>
+<span class="fc" id="L89">    }</span>
 
     @Override
     public int hashCode() {
-<span class="fc" id="L65">        int hash = 3;</span>
-<span class="fc" id="L66">        hash = 41 * hash + Objects.hashCode(this.upperleft);</span>
-<span class="fc" id="L67">        hash = 41 * hash + (int) (Double.doubleToLongBits(this.width) ^ (Double.doubleToLongBits(this.width) &gt;&gt;&gt; 32));</span>
-<span class="fc" id="L68">        hash = 41 * hash + (int) (Double.doubleToLongBits(this.height) ^ (Double.doubleToLongBits(this.height) &gt;&gt;&gt; 32));</span>
-<span class="fc" id="L69">        return hash;</span>
+<span class="fc" id="L93">        int hash = 3;</span>
+<span class="fc" id="L94">        hash = 41 * hash + Objects.hashCode(this.upperleft);</span>
+<span class="fc" id="L95">        hash = 41 * hash + (int) (Double.doubleToLongBits(this.width) ^ (Double.doubleToLongBits(this.width) &gt;&gt;&gt; 32));</span>
+<span class="fc" id="L96">        hash = 41 * hash + (int) (Double.doubleToLongBits(this.height) ^ (Double.doubleToLongBits(this.height) &gt;&gt;&gt; 32));</span>
+<span class="fc" id="L97">        return hash;</span>
     }
 
     @Override
     public boolean equals(Object obj) {
-<span class="fc bfc" id="L74" title="All 2 branches covered.">        if (this == obj) {</span>
-<span class="fc" id="L75">            return true;</span>
+<span class="fc bfc" id="L102" title="All 2 branches covered.">        if (this == obj) {</span>
+<span class="fc" id="L103">            return true;</span>
         }
-<span class="pc bpc" id="L77" title="1 of 2 branches missed.">        if (obj == null) {</span>
-<span class="nc" id="L78">            return false;</span>
+<span class="pc bpc" id="L105" title="1 of 2 branches missed.">        if (obj == null) {</span>
+<span class="nc" id="L106">            return false;</span>
         }
-<span class="pc bpc" id="L80" title="1 of 2 branches missed.">        if (getClass() != obj.getClass()) {</span>
-<span class="nc" id="L81">            return false;</span>
+<span class="pc bpc" id="L108" title="1 of 2 branches missed.">        if (getClass() != obj.getClass()) {</span>
+<span class="nc" id="L109">            return false;</span>
         }
-<span class="fc" id="L83">        final Rectangle other = (Rectangle) obj;</span>
-<span class="pc bpc" id="L84" title="1 of 2 branches missed.">        if (Double.doubleToLongBits(this.width) != Double.doubleToLongBits(other.width)) {</span>
-<span class="nc" id="L85">            return false;</span>
+<span class="fc" id="L111">        final Rectangle other = (Rectangle) obj;</span>
+<span class="pc bpc" id="L112" title="1 of 2 branches missed.">        if (Double.doubleToLongBits(this.width) != Double.doubleToLongBits(other.width)) {</span>
+<span class="nc" id="L113">            return false;</span>
         }
-<span class="pc bpc" id="L87" title="1 of 2 branches missed.">        if (Double.doubleToLongBits(this.height) != Double.doubleToLongBits(other.height)) {</span>
-<span class="nc" id="L88">            return false;</span>
+<span class="pc bpc" id="L115" title="1 of 2 branches missed.">        if (Double.doubleToLongBits(this.height) != Double.doubleToLongBits(other.height)) {</span>
+<span class="nc" id="L116">            return false;</span>
         }
-<span class="pc bpc" id="L90" title="1 of 2 branches missed.">        if (!Objects.equals(this.upperleft, other.upperleft)) {</span>
-<span class="nc" id="L91">            return false;</span>
+<span class="pc bpc" id="L118" title="1 of 2 branches missed.">        if (!Objects.equals(this.upperleft, other.upperleft)) {</span>
+<span class="nc" id="L119">            return false;</span>
         }
-<span class="fc" id="L93">        return true;</span>
+<span class="fc" id="L121">        return true;</span>
     }
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.eclemma.org/jacoco">JaCoCo</a> 0.7.6.201602180812</span></div></body></html>
