--- a/.jacocoverage/report.html/g45502.atl.asciipaint.model/Square.java.html
+++ b/.jacocoverage/report.html/g45502.atl.asciipaint.model/Square.java.html
@@ -5,13 +5,24 @@
  * @author G45502
  */
 public class Square extends Rectangle {
-
-    public Square(Point upperleft, double side, char color) {
-<span class="fc" id="L10">        super(upperleft, side, side, color);</span>
-<span class="fc" id="L11">    }</span>
     
+    /**
+     * Builder of square using Rectangle with all attribute
+     * @param upperleft point at the to left of the square
+     * @param side lenght of each side of the square
+     * @param color character to fill the shape with
+     */
+    public Square(Point upperleft, double side, char color) {
+<span class="fc" id="L16">        super(upperleft, side, side, color);</span>
+<span class="fc" id="L17">    }</span>
+    
+    /**
+     * Builder of Square using Rectangle with a point and side
+     * @param upperleft point at the to left of the square
+     * @param side lenght of each side of the square
+     */
     public Square(Point upperleft, double side) {
-<span class="nc" id="L14">        super(upperleft, side, side);</span>
-<span class="nc" id="L15">    }</span>
+<span class="nc" id="L25">        super(upperleft, side, side);</span>
+<span class="nc" id="L26">    }</span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.eclemma.org/jacoco">JaCoCo</a> 0.7.6.201602180812</span></div></body></html>
